--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,7 @@
         "guzzlehttp/guzzle": "5.3"
     },
     "require-dev": {
-        "phpspec/phpspec": "2.3.0-beta",
-        "clue/phar-composer": "^0.5.0"
+        "phpspec/phpspec": "2.3.0-beta"
     },
     "authors": [
         {
@@ -17,5 +16,6 @@
             "email": "technodelight@gmail.com"
         }
     ],
-    "autoload": {"psr-0": {"": "src"}}
+    "autoload": {"psr-0": {"": "src"}},
+    "bin": ["bin/jira"]
 }
