Add pick up command

--- a/src/Technodelight/Jira/Resources/views/Issues/default.template
+++ b/src/Technodelight/Jira/Resources/views/Issues/default.template
@@ -1,7 +1,6 @@
 <info>{{ issueNumber }}:</info> {{ issueType }} (estimate: {{ estimate }}, spent: {{ spent }})
     {{ summary }}
-<comment>link:</comment>
-    {{ url }}
+<comment>link:</comment> {{ url }}
 <comment>branches:</comment>
     {{ branches }}
 
