Add assignee to templates

--- a/src/Technodelight/Jira/Resources/views/Issues/default.template
+++ b/src/Technodelight/Jira/Resources/views/Issues/default.template
@@ -1,5 +1,6 @@
 <info>{{ issueNumber }}:</info> {{ issueType }} (estimate: {{ estimate }}, spent: {{ spent }})
     {{ summary }}
+<comment>assignee:</comment> {{ assignee }}
 <comment>link:</comment> {{ url }}
 <comment>branches:</comment>
     {{ branches }}
