Improve issue rendering with make use of the verbosity, refactor code - extract templating to technodelight/simplate w/ javascript, add `depends` - move jira client into separate class, inject it into the wrapper which will have the specific methods - hide branch names from list views, show branch names incl. generated when verbosity enabled - add verbosity handling where it makes sense

--- a/src/Technodelight/Jira/Resources/views/Issues/default.template
+++ b/src/Technodelight/Jira/Resources/views/Issues/default.template
@@ -1,7 +1,13 @@
 <info>{{ issueNumber }}:</info> {{ issueType }} (estimate: {{ estimate }}, spent: {{ spent }})
     {{ summary }}
+<comment>description:</comment>
+    {{ description }}
+{{ depends $assignee != 'Unassigned' }}
 <comment>assignee:</comment> {{ assignee }}
+{{ end_depends }}
 <comment>link:</comment> {{ url }}
+{{ depends ($verbosity > 1) }}
 <comment>branches:</comment>
     {{ branches }}
+{{ end_depends }}
 
