--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
         "php": ">=5.4.0",
         "symfony/console": "^2.7",
         "stecman/symfony-console-completion": "^0.5.1",
-        "guzzlehttp/guzzle": "5.3"
+        "guzzlehttp/guzzle": "5.3",
+        "technodelight/simplate": "dev-master"
     },
     "require-dev": {
     },
