Render parent issue details

--- a/src/Technodelight/Jira/Resources/views/Issues/default.template
+++ b/src/Technodelight/Jira/Resources/views/Issues/default.template
@@ -7,9 +7,7 @@
 {{ end_depends }}
 <comment>link:</comment> {{ url }}
 {{ depends !empty($parentIssueNumber) }}
-<comment>parent:</comment> {{ parentIssueNumber }} ({{ parentUrl }})
-    {{ parentIssueSummary }}
-{{ end_depends }}
+<comment>parent:</comment> {{ parentIssueNumber }} {{ parentIssueSummary }} ({{ parentUrl }}){{ end_depends }}
 {{ depends ($verbosity > 1) }}
 <comment>branches:</comment>
     {{ branches }}
