--- a/src/Technodelight/Jira/Resources/views/Issues/defect.template
+++ b/src/Technodelight/Jira/Resources/views/Issues/defect.template
@@ -1,7 +1,8 @@
 <info>{{ issueNumber }}:</info> <error>{{ issueType }}</error> (estimate: {{ estimate }}, spent: {{ spent }})
     {{ summary }}
+{{ depends !empty($description) }}
 <comment>description:</comment>
-    {{ description }}
+    {{ description }}{{ end_depends }}
 {{ depends !empty($environment) }}
 <comment>environment:</comment> {{ environment }}
 {{ end_depends }}
@@ -10,6 +11,8 @@
 <comment>assignee:</comment> {{ assignee }}
 {{ end_depends }}
 <comment>link:</comment> {{ url }}
+{{ depends !empty($parentIssueNumber) }}
+<comment>parent:</comment> {{ parentIssueNumber }} {{ parentIssueSummary }} ({{ parentUrl }}){{ end_depends }}
 {{ depends ($verbosity > 1) }}
 <comment>branches:</comment>
     {{ branches }}
