+ refactor `PickupIssueCommand` to accept transition command and transition name from above config + add "story: PROJ-321 (https://sub.jira.domain/browse/PROJ-321)" info for every issues if available + search result renderer sort by stories + add default verbosity as 3 for in progress issues to show worklogs/comments + limit displaying previous worklogs for the recent 10

--- a/src/Technodelight/Jira/Resources/views/Issues/defect.template
+++ b/src/Technodelight/Jira/Resources/views/Issues/defect.template
@@ -1,7 +1,6 @@
 <info>{{ issueNumber }}:</info> <error>{{ issueType }}</error> (estimate: {{ estimate }}, spent: {{ spent }})
     {{ summary }}
-{{ depends !empty($description) }}
-<comment>description:</comment>
+{{ depends !empty($description) }}<comment>description:</comment>
     {{ description }}{{ end_depends }}
 {{ depends !empty($environment) }}
 <comment>environment:</comment> {{ environment }}
@@ -11,10 +10,10 @@
 <comment>assignee:</comment> {{ assignee }}
 {{ end_depends }}
 <comment>link:</comment> {{ url }}
-{{ depends !empty($parentIssueNumber) }}
-<comment>parent:</comment> {{ parentIssueNumber }} {{ parentIssueSummary }} ({{ parentUrl }}){{ end_depends }}
 {{ depends ($verbosity > 1) }}
 <comment>branches:</comment>
     {{ branches }}
 {{ end_depends }}
+{{ depends !empty($worklogs) }}<comment>logged work:</comment>
+    {{ worklogs }}{{ end_depends }}
 
