+ fix fatal error unexpected value exception not found + tabulate issue list better + display comments too when verbosity is very verbose + add filter options to todo (--stories --bugs --tasks --filter "search term") + fix weekly dashboard + render weekly dashboard similar as in Jira

--- a/src/Technodelight/Jira/Resources/views/Commands/transition.template
+++ b/src/Technodelight/Jira/Resources/views/Commands/transition.template
@@ -1,4 +1,4 @@
-It seems the issue <info>{{ issueKey }}</info> has been moved to <info>{{ status }}</info>, and currently assigned to <info>{{ asignee }}</info>
+It seems the issue <info>{{ issueKey }}</info> is already <info>{{ status }}</info>, and currently assigned to <info>{{ asignee }}</info>
 
 Possible transitions:
 <info>{{ transitionsNames }}</info>
