--- a/src/Technodelight/Jira/Resources/views/Issues/default.template
+++ b/src/Technodelight/Jira/Resources/views/Issues/default.template
@@ -12,3 +12,5 @@
     {{ end_depends }}
     {{ depends !empty($worklogs) }}<comment>logged work:</comment>
     {{ worklogs }}{{ end_depends }}
+    {{ depends !empty($comments) }}<comment>comments:</comment>
+    {{ comments }}{{ end_depends }}
