--- a/src/Technodelight/Jira/Resources/views/Issues/defect.template
+++ b/src/Technodelight/Jira/Resources/views/Issues/defect.template
@@ -16,3 +16,5 @@
     {{ end_depends }}
     {{ depends !empty($worklogs) }}<comment>logged work:</comment>
     {{ worklogs }}{{ end_depends }}
+    {{ depends !empty($comments) }}<comment>comments:</comment>
+    {{ comments }}{{ end_depends }}
