fix dashboard to order columns by dates increment, add day name

--- a/src/Technodelight/Jira/Resources/views/Commands/worklog.template
+++ b/src/Technodelight/Jira/Resources/views/Commands/worklog.template
@@ -1,4 +1,3 @@
     <comment>{{ author }}</comment>: {{ timeSpent }} at {{ date }}
     {{ depends !empty($comment) }}
-        {{ comment }}
-    {{ end_depends }}
+        {{ comment }}{{ end_depends }}
