Refactor issue rendering, colorify task type label based on issue type, reformat information for issues

--- a/src/Technodelight/Jira/Resources/views/Issues/default.template
+++ b/src/Technodelight/Jira/Resources/views/Issues/default.template
@@ -1,10 +1,7 @@
-<info>{{ issueNumber }}:</info> {{ issueType }} (estimate: {{ estimate }}, spent: {{ spent }})
-        {{ summary }}
+<info>{{ issueNumber }}:</info> {{ issueType }} {{ summary }}
+    {{ depends $assignee != 'Unassigned' }}<comment>assignee:</comment> {{ assignee }} {{ end_depends }}<info>{{ depends $estimate != 'none' }}estimate: {{ estimate }}, {{ end_depends }}spent: {{ spent }}{{ depends $remaining != 'none' && !empty($remaining) }}, remaining: {{ remaining }}{{ end_depends }}</info>
     {{ depends !empty($description) }}<comment>description:</comment>
         {{ description }}{{ end_depends }}
-    {{ depends $assignee != 'Unassigned' }}
-    <comment>assignee:</comment> {{ assignee }}
-    {{ end_depends }}
     <comment>link:</comment> {{ url }}
     {{ depends ($verbosity > 1) }}
     <comment>branches:</comment>
