- fix todo list to be non-verbose (somehow it went verbose and shows more than 2 lines of `description`) - when transitioning, show generated branch name for starting on a task quicker - fix error messages reported when parsing parent branch hash

--- a/src/Technodelight/Jira/Resources/views/Commands/transition.template
+++ b/src/Technodelight/Jira/Resources/views/Commands/transition.template
@@ -1,6 +1,8 @@
-It seems the issue <info>{{ issueKey }}</info> is already <info>{{ status }}</info>, and currently assigned to <info>{{ asignee }}</info>
+{{ depends !$success }}It seems the issue <info>{{ issueKey }}</info> is already <info>{{ status }}</info>, and currently assigned to <info>{{ asignee }}</info>
 
 Possible transitions:
 <info>{{ transitionsNames }}</info>
-
+{{ end_depends }}
 <comment>link:</comment> {{ url }}
+{{ depends $success }}<comment>branches:</comment>
+{{ branches }}{{ end_depends }}
