--- a/src/Technodelight/Jira/Resources/views/Commands/logtime.template
+++ b/src/Technodelight/Jira/Resources/views/Commands/logtime.template
@@ -1,4 +1,5 @@
-You have successfully logged <comment>{{ logged }}</comment> to issue <info>{{ issueKey }}</info>
+You have successfully logged <comment>{{ logged }}</comment> to issue <info>{{ issueKey }} on {{ startDay }}</info>
+{{ issueUrl }}
 
 Time spent: <comment>{{ spent }}</comment>, Remaining estimate: <comment>{{ estimate }}</comment>
 
