--- a/src/Technodelight/Jira/Resources/views/Issues/default.template
+++ b/src/Technodelight/Jira/Resources/views/Issues/default.template
@@ -3,11 +3,11 @@
     {{ depends !empty($description) }}<comment>description:</comment>
         {{ description }}{{ end_depends }}
     <comment>link:</comment> {{ url }}
-    {{ depends ($verbosity > 1) }}
+    {{ depends ($verbosity >= 64) }}
     <comment>branches:</comment>
         {{ branches }}
     {{ end_depends }}
-    {{ depends ($verbosity > 1 && !empty($hubIssues)) }}
+    {{ depends ($verbosity >= 64 && !empty($hubIssues)) }}
     <comment>pull requests:</comment>
         {{ hubIssues }}{{ end_depends }}
     {{ depends !empty($worklogs) }}<comment>logged work:</comment>
