Improve worklog renders, improve git helper to return branch info better

--- a/src/Technodelight/Jira/Resources/views/Commands/logtime.template
+++ b/src/Technodelight/Jira/Resources/views/Commands/logtime.template
@@ -1,4 +1,4 @@
-You have successfully logged <comment>{{ logged }}</comment> to issue <info>{{ issueKey }} on {{ startDay }}</info>
+You have successfully logged <comment>{{ logged }}</comment> to issue <info>{{ issueKey }} on {{ startDay }}</info> ({{ worklogId }})
 {{ issueUrl }}
 
 Time spent: <comment>{{ spent }}</comment>, Remaining estimate: <comment>{{ estimate }}</comment>
