--- a/src/Technodelight/Jira/Resources/views/Commands/worklog.template
+++ b/src/Technodelight/Jira/Resources/views/Commands/worklog.template
@@ -1,3 +1,3 @@
-    <comment>{{ author }}</comment>: {{ timeSpent }} at {{ date }}
+    <comment>{{ author }}</comment>: {{ timeSpent }} at {{ date }} ({{ worklogId }})
     {{ depends !empty($comment) }}
         {{ comment }}{{ end_depends }}
