--- a/src/Technodelight/Jira/Resources/views/Issues/default.template
+++ b/src/Technodelight/Jira/Resources/views/Issues/default.template
@@ -1,10 +1,13 @@
 <info>{{ issueNumber }}:</info> {{ issueType }} {{ summary }}
-    {{ depends $assignee != 'Unassigned' }}<comment>assignee:</comment> {{ assignee }} {{ end_depends }}
+    {{ depends $assignee != 'Unassigned' }}<comment>assignee:</comment> {{ assignee }} {{ end_depends }}{{ depends $reporter }}, <comment>reported by</comment> {{ reporter }}{{ end_depends }}
         {{ depends !$progress }}<info>{{ end_depends }}{{ depends $estimate != 'none' && !$progress }}estimate: {{ estimate }}, {{ end_depends }}{{ depends !$progress }}spent: {{ spent }}{{ end_depends }}{{ depends $remaining != 'none' && !empty($remaining) && !$progress }}, remaining: {{ remaining }}{{ end_depends }}{{ depends !$progress }}</info>{{ end_depends }}
     {{ depends !empty($progress) }}{{ progress }}{{ end_depends }}
     {{ depends !empty($description) }}<comment>description:</comment>
         {{ description }}{{ end_depends }}
     <comment>link:</comment> {{ url }}
+    {{ depends ($verbosity >= 64 && !empty($parent)) }}
+    <comment>parent task:</comment>
+        {{ parent }}{{ end_depends }}
     {{ depends ($verbosity >= 64 && !empty($subTasks)) }}
     <comment>subtasks:</comment>
         {{ subTasks }}{{ end_depends }}
