--- a/composer.json
+++ b/composer.json
@@ -4,14 +4,15 @@
     "minimum-stability": "dev",
     "license": "MIT",
     "require": {
-        "php": ">=5.4.0",
+        "php": "~5.6",
         "symfony/console": "^2.7",
         "stecman/symfony-console-completion": "^0.5.1",
         "guzzlehttp/guzzle": "5.3",
         "technodelight/simplate": "dev-master",
         "symfony/config": "^2.7",
         "symfony/dependency-injection": "^2.7",
-        "sirprize/queried": "^0.1.0"
+        "sirprize/queried": "^0.1.0",
+        "knplabs/github-api": "^1.7"
     },
     "require-dev": {
         "phpspec/phpspec": "^2.4"
