--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "symfony/yaml": "^3.2"
     },
     "require-dev": {
-        "phpspec/phpspec": "^2.4"
+        "phpspec/phpspec": "^2.4",
+        "behat/behat": "^3.3"
     },
     "authors": [
         {
