--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "symfony/dependency-injection": "^2.7",
         "sirprize/queried": "^0.1.0",
         "knplabs/github-api": "^1.7",
-        "symfony/yaml": "^3.2"
+        "symfony/yaml": "^3.2",
+        "icanboogie/storage": "^2.1"
     },
     "require-dev": {
         "phpspec/phpspec": "^2.4",
