--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
         "php": "~5.6",
         "symfony/console": "^2.7",
         "stecman/symfony-console-completion": "^0.5.1",
-        "guzzlehttp/guzzle": "5.3",
+        "guzzlehttp/guzzle": "^6.2",
         "technodelight/simplate": "dev-master",
         "symfony/config": "^3.2",
         "symfony/dependency-injection": "^2.7",
