--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "minimum-stability": "dev",
     "license": "MIT",
     "require": {
-        "php": "~5.6",
+        "php": "~5.6 || ^7.0",
         "symfony/console": "^2.7",
         "stecman/symfony-console-completion": "^0.5.1",
         "guzzlehttp/guzzle": "^6.2",
