Improve context file responsibilities, add new scenario

--- a/behat.yml
+++ b/behat.yml
@@ -5,4 +5,4 @@ default:
                 - %paths.base%/features/integration/
 
             contexts:
-              - DashboardContext
+              - ApplicationContext
