--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,6 @@ php:
   - 7.0
   - 7.1
 before_script: composer install
-script: bin/phpspec run
+script:
+  - bin/phpspec run
+  - bin/behat -fprogress
