--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,12 @@
 language: php
+os:
+  - linux
+  - osx
 php:
   - 5.6
   - 7.0
   - 7.1
+  - nightly
 before_script: composer install
 script:
   - bin/phpspec run
