Add download attachment command
- display attachments for issues

--- a/src/Technodelight/Jira/Resources/views/Issues/default.template
+++ b/src/Technodelight/Jira/Resources/views/Issues/default.template
@@ -10,6 +10,10 @@
     <comment>subtasks:</comment>
         {{ subTasks }}{{ end_depends }}
     {{ depends ($verbosity >= 64) }}
+    {{ depends ($verbosity >= 64 && !empty($attachments)) }}
+    <comment>attachments:</comment>
+        {{ attachments }}
+    {{ end_depends }}
     <comment>branches:</comment>
         {{ branches }}
     {{ end_depends }}
