- one day's amount of work hours is now configurable - use SecondsToNone library to convert to/from human readable text and seconds - separate "domain" models from jira internal formats (ie. remove DateHelper::fromJira calls from everywhere) - add new `Tempo` API

--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "sirprize/queried": "^0.1.0",
         "knplabs/github-api": "^1.7",
         "symfony/yaml": "^3.2",
-        "icanboogie/storage": "^2.1"
+        "icanboogie/storage": "^2.1",
+        "technodelight/seconds-to-none": "^0.1.0"
     },
     "require-dev": {
         "phpspec/phpspec": "^2.4",
