--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "knplabs/github-api": "^1.7",
         "symfony/yaml": "^3.2",
         "icanboogie/storage": "^2.1",
-        "technodelight/seconds-to-none": "^0.1.0"
+        "technodelight/seconds-to-none": "^0.1.0",
+        "hoa/console": "^3.17"
     },
     "require-dev": {
         "phpspec/phpspec": "^2.4",
