--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
             "url": "https://github.com/technodelight/simplate"
         }
     ],
-    "autoload": {"psr-0": {"Technodelight": "src"}},
+    "autoload": {"psr-0": {"": "src"}},
     "config": {
       "bin-dir": "bin"
     },
