Implement Tempo timesheets on dashboard

--- a/behat.yml
+++ b/behat.yml
@@ -5,6 +5,7 @@ default:
                 - %paths.base%/features/integration/
 
             contexts:
-              - ApplicationContext
-              - GithubContext
-              - JiraContext
+                - ApplicationContext
+                - GithubContext
+                - JiraContext
+                - TempoContext
