--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
     },
     "require-dev": {
         "phpspec/phpspec": "^2.4",
-        "behat/behat": "^3.3"
+        "behat/behat": "^3.3",
+        "ocramius/proxy-manager": "^2.0"
     },
     "authors": [
         {
