--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,7 @@
     },
     "require-dev": {
         "phpspec/phpspec": "^2.4",
-        "behat/behat": "^3.3",
-        "ocramius/proxy-manager": "^2.0"
+        "behat/behat": "^3.3"
     },
     "authors": [
         {
