Add `comment` command

--- a/src/Technodelight/Jira/Resources/views/Commands/comment.template
+++ b/src/Technodelight/Jira/Resources/views/Commands/comment.template
@@ -1,2 +1,2 @@
-    <info>{{ author }}</info> ({{ created }}):
+    <info>{{ author }}</info> ({{ created }}): <fg=black>({{ commentId }})</>
         {{ body }}
