--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "symfony/yaml": "^3.2",
         "icanboogie/storage": "^2.1",
         "technodelight/seconds-to-none": "^0.2.0",
-        "hoa/console": "^3.17"
+        "hoa/console": "^3.17",
+        "ssnepenthe/color-utils": "^0.4.2"
     },
     "require-dev": {
         "phpspec/phpspec": "^2.4",
