Fixes and improvements
- `init` command can work interactive now!
- improved worklog listing for long-running tickets
- show hidden comment url
- fix for open app
- fix branch generation
- fix list aliases command

--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
             "url": "https://github.com/technodelight/simplate"
         }
     ],
-    "autoload": {"psr-0": {"": "src"}},
+    "autoload": {"psr-0": {"Technodelight\\": "src"}},
     "config": {
       "bin-dir": "bin"
     },
