--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
     "license": "MIT",
     "require": {
         "php": ">= 7.0",
+        "ext-json": "*",
         "symfony/console": "^2.7",
         "stecman/symfony-console-completion": "^0.5.1",
         "guzzlehttp/guzzle": "^6.2",
