--- a/behat.yml
+++ b/behat.yml
@@ -9,3 +9,6 @@ default:
                 - GithubContext
                 - JiraContext
                 - TempoContext
+
+            filters:
+              tags: '@cli'
