--- a/composer.json
+++ b/composer.json
@@ -31,11 +31,11 @@
         "technodelight/php-cli-editor-input": "^1.0",
         "technodelight/php-cli-iterm-image-renderer": "^1.0",
         "technodelight/php-jira-tempo-plugin-api": "^1.1",
-        "technodelight/php-jira-domain-models": "^1.1"
+        "technodelight/php-jira-domain-models": "^1.2"
     },
     "require-dev": {
-        "phpspec/phpspec": "^2.4",
-        "behat/behat": "^3.3"
+        "behat/behat": "^3.3",
+        "phpspec/phpspec": "^2.5"
     },
     "authors": [
         {
