--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
         "technodelight/php-cli-editor-input": "^1.0",
         "technodelight/php-cli-iterm-image-renderer": "^1.0",
         "technodelight/php-jira-tempo-plugin-api": "^1.1",
-        "technodelight/php-jira-domain-models": "^1.2"
+        "technodelight/php-jira-domain-models": "^1.2",
+        "technodelight/php-jira-cli-interfaces": "^1.0"
     },
     "require-dev": {
         "behat/behat": "^3.3",
