--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "technodelight/jira",
     "description": "JIRA PHP console application for day-to-day development",
-    "license": "MIT",
+    "license": "GPL-3.0-or-later",
     "require": {
         "php": ">= 7.0",
         "ext-json": "*",
@@ -30,11 +30,13 @@
         "technodelight/php-cli-cross-platform-open": "^1.0",
         "technodelight/php-cli-editor-input": "^1.0",
         "technodelight/php-cli-iterm-image-renderer": "^1.0",
-        "technodelight/php-jira-tempo-plugin-api": "^1.1"
+        "technodelight/php-jira-tempo-plugin-api": "^1.1",
+        "technodelight/php-jira-domain-models": "^1.2",
+        "technodelight/php-jira-cli-interfaces": "^1.0"
     },
     "require-dev": {
-        "phpspec/phpspec": "^2.4",
-        "behat/behat": "^3.3"
+        "behat/behat": "^3.3",
+        "phpspec/phpspec": "^2.5"
     },
     "authors": [
         {
@@ -45,6 +47,18 @@
     "autoload": {"psr-0": {"Technodelight\\": "src"}},
     "config": {
       "bin-dir": "bin"
+    },
+    "scripts": {
+        "test": [
+            "@test-unit",
+            "@test-acceptance"
+        ],
+        "test-unit": [
+            "bin/phpspec --ansi run -fpretty"
+        ],
+        "test-acceptance": [
+            "bin/behat --colors"
+        ]
     },
     "autoload-dev": {"psr-0": {"": "features/bootstrap"}},
     "bin": ["bin/jira"]
