--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
         "technodelight/php-cli-iterm-image-renderer": "^1.0",
         "technodelight/php-jira-tempo-plugin-api": "^1.1",
         "technodelight/php-jira-domain-models": "^1.3",
-        "technodelight/php-jira-cli-interfaces": "^1.0"
+        "technodelight/php-jira-cli-interfaces": "^1.0",
+        "technodelight/php-jira-cli-tag-converter": "^1.0"
     },
     "require-dev": {
         "behat/behat": "^3.3",
